<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="my_account">My account</string>
    <string name="_0">0</string>
    <string name="usd">USD</string>
    <string name="car">Car</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="enter_note">Enter note</string>
    <string name="dot">.</string>
    <string name="_20_10">20+10</string>
    <string name="_24_may_2024">24 May 2024</string>
    <string name="add_account">Add Account</string>
    <string name="account_name">Account Name</string>
    <string name="account_info">Account Info</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="shopping">Shopping</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="currency">Currency:</string>
    <string name="balance">Balance:</string>
    <string name="my_card">My card</string>
    <string name="debit">Debit</string>
    <string name="azn">AZN</string>
    <string name="_123">123</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="record_info">Record Info</string>
    <string name="category">Category</string>
    <string name="account">Account:</string>
    <string name="amount2">Amount:</string>
    <string name="note">Note:</string>
    <string name="account_to">Account to:</string>
    <string name="amount_to">Amount to:</string>
    <string name="bla_bla_bla">bla bla bla</string>
    <string name="my_second_card">My second card</string>
    <string name="_456">456</string>
    <string name="expenses">expenses</string>
    <string name="date">Date:</string>
</resources>